<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#384D7A"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/shape"
            app:layout_constraintBottom_toTopOf="@+id/calculateBTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTXT"
            android:id="@+id/shape"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_imc"
            app:layout_constraintTop_toBottomOf="@+id/titleTXT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/weightEDT"
            android:id="@+id/image"/>

    <TextView
            android:visibility="invisible"
            android:paddingVertical="15dp"
            android:gravity="center_vertical"
            android:id="@+id/resultTXT"
            style="@style/result_style"
            android:layout_marginHorizontal="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/shape"
            app:layout_constraintTop_toBottomOf="@+id/image"
            android:text="@string/result_text"
            android:background="@drawable/shape"
            android:backgroundTint="#384D7A"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="@+id/shape"
            app:layout_constraintEnd_toEndOf="@+id/shape"/>

    <EditText
            tools:visibility="visible"
            android:id="@+id/weightEDT"
            style="@style/input_style"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:hint="@string/peso_hint"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintBottom_toTopOf="@id/hightEDT"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"/>

    <EditText
            tools:visibility="visible"
            android:id="@+id/hightEDT"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:hint="@string/hint_altura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightEDT"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/shape"/>

    <TextView
            android:id="@+id/titleTXT"
            style="@style/title_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/imc"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"/>

    <Button
            android:id="@+id/calculateBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="#A1C7E3"
            android:text="@string/calcular"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#384D7A"
            android:background="@drawable/shape"
            android:layout_marginBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shape"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--            android:id="@+id/guideline"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="horizontal"-->
    <!--            app:layout_constraintGuide_begin="600dp"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>